[gd_scene load_steps=10 format=3 uid="uid://bpj5rq6vpryhv"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_ugw0d"]
[ext_resource type="Texture2D" uid="uid://byoyjmrflddx1" path="res://assets/sprites/underwater-diving-files/PNG/enemies/fish.png" id="2_iih3s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hc2q5"]
radius = 17.0
height = 76.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h1krk"]
atlas = ExtResource("2_iih3s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2itw"]
atlas = ExtResource("2_iih3s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj1qx"]
atlas = ExtResource("2_iih3s")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsgx4"]
atlas = ExtResource("2_iih3s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ae6jm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1krk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2itw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj1qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsgx4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_txjhs"]
radius = 343.111

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
gravity_scale = 0.0
script = ExtResource("1_ugw0d")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hc2q5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-7.62939e-06, 0)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_ae6jm")
animation = &"Idle"
frame_progress = 0.53864

[node name="RadarArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarArea"]
shape = SubResource("CircleShape2D_txjhs")

[node name="FollowingTime" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Beak" type="Node2D" parent="."]
position = Vector2(37, 1)

[node name="IdleMovement" type="Timer" parent="."]
wait_time = 2.0

[node name="GoingBackTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="RadarArea" to="." method="_on_radar_area_body_entered"]
[connection signal="timeout" from="FollowingTime" to="." method="_on_following_time_timeout"]
[connection signal="timeout" from="IdleMovement" to="." method="_on_idle_movement_timeout"]
[connection signal="timeout" from="GoingBackTimer" to="." method="_on_going_back_timer_timeout"]
